--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -1,1 +1,1 @@
-[]
+{"Dashboard":"\u0644\u0648\u062d\u0629 \u0627\u0644\u062a\u062d\u0643\u0645","Login":"\u062a\u0633\u062c\u064a\u0644 \u062f\u062e\u0648\u0644"}
